--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 </head>
 
 <body>
-    <h1>🎨 Floyd–Steinberg Dithering Demo</h1>
+    <h1>🎨 Floyd–Steinberg Dithering</h1>
 
     <div class="controls">
         <input type="file" id="fileInput" accept="image/*">
