--- a/wplace/index.html
+++ b/wplace/index.html
@@ -4,140 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Floyd–Steinberg Dithering</title>
-    <style>
-        body {
-            font-family: system-ui, sans-serif;
-            background: #f4f4f4;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 2em;
-            gap: 1em;
-        }
-
-        canvas {
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-            max-width: 90vw;
-        }
-
-        canvas.pixelated {
-            image-rendering: pixelated;
-        }
-
-        .controls {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1em;
-            align-items: center;
-            justify-content: center;
-        }
-
-        button,
-        select,
-        input {
-            padding: 0.5em 1.2em;
-            border-radius: 6px;
-            font-size: 1em;
-        }
-
-        button {
-            border: none;
-            background: #007bff;
-            color: white;
-            cursor: pointer;
-            font-weight: 600;
-        }
-
-        button:disabled {
-            background: #aaa;
-            cursor: default;
-        }
-
-        fieldset {
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            padding: 1em;
-            background: white;
-            width: fit-content;
-        }
-
-        legend {
-            font-weight: 600;
-        }
-
-        .info {
-            color: #333;
-            font-size: 0.9em;
-        }
-
-        .palette-controls {
-            display: grid;
-            grid-template-columns: repeat(32, 1fr);
-            gap: 6px;
-            justify-content: center;
-            padding: 0.5em;
-            box-sizing: border-box;
-        }
-
-        @media (max-width: 1130px) {
-            .palette-controls {
-                grid-template-columns: repeat(16, 1fr);
-            }
-        }
-
-        @media (max-width: 590px) {
-            .palette-controls {
-                grid-template-columns: repeat(8, 1fr);
-            }
-        }
-
-        .color-btn {
-            width: 24px;
-            height: 24px;
-            border: 2px solid #666;
-            border-radius: 4px;
-            cursor: pointer;
-            box-shadow: 0 0 2px rgba(0, 0, 0, 0.2);
-            transition: transform 0.1s, opacity 0.2s, border-color 0.2s;
-        }
-
-        .color-btn.enabled {
-            opacity: 1;
-            border-color: #222;
-        }
-
-        .color-btn.disabled {
-            opacity: 0.3;
-            border-color: #aaa;
-        }
-
-        .canvas-wrapper {
-            position: relative;
-            width: 100%;
-            aspect-ratio: 100 / 60;
-            /* height = 60% of width */
-            overflow: hidden;
-            border: 2px solid #ccc;
-            border-radius: 12px;
-            background: #222;
-            touch-action: none;
-            /* disable browser gestures */
-            cursor: grab;
-        }
-
-        .canvas-wrapper:active {
-            cursor: grabbing;
-        }
-
-        .canvas-wrapper canvas {
-            position: absolute;
-            top: 0;
-            left: 0;
-            transform-origin: 0 0;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -145,8 +12,11 @@
 
     <div class="controls">
         <input type="file" id="fileInput" accept="image/*">
-        <label>Scale: <input type="number" id="scaleInput" value="1.00" step="0.05" min="0.05"
-                style="width:60px"></label>
+        <input type="url" id="urlInput" placeholder="Image URL..." style="width:280px">
+        <button id="loadUrlBtn">Load from URL</button>
+        <label>Scale:
+            <input type="number" id="scaleInput" value="1.00" step="0.05" min="0.05" style="width:60px">
+        </label>
         <label>Interpolation:
             <select id="interpolation">
                 <option value="nearest">Nearest</option>
@@ -155,6 +25,7 @@
             </select>
         </label>
         <button id="downloadBtn" disabled>Download Dithered Image</button>
+        <button id="shareBtn">Share Settings</button>
     </div>
 
     <fieldset>
@@ -210,7 +81,6 @@
         </div>
     </fieldset>
 
-
     <fieldset>
         <legend>Color Palette</legend>
         <div id="paletteControls" class="palette-controls"></div>
@@ -224,142 +94,10 @@
         <canvas id="canvas"></canvas>
     </div>
 
-
+    <script src="js/query.js"></script>
+    <script src="js/palette.js"></script>
+    <script src="js/dithering.js"></script>
     <script>
-        // ---- Floyd–Steinberg Dithering Core ----
-        function makeDistanceFunction(palette, channelBalance = 0.75, gammaInput = 1.2, chromaWeight = 0.3) {
-            const f = x => Math.pow(x / 255, gammaInput);
-
-            // Precompute linearized palette and per-entry metadata
-            const paletteMeta = palette.map(([r, g, b]) => {
-                const pl = [f(r), f(g), f(b)];
-                const pChroma = Math.max(pl[0], pl[1], pl[2]) - Math.min(pl[0], pl[1], pl[2]);
-                const pLightness = (pl[0] + pl[1] + pl[2]) / 3;
-                const isMidGrey = pChroma < 0.1 && pLightness > 0.15 && pLightness < 0.85;
-                return { pl, pChroma, pLightness, isMidGrey };
-            });
-
-            const weights = [0.3, 0.59, 0.11].map(w => Math.pow(w, channelBalance));
-
-            // The returned function only needs the source color (0..255)
-            return function distanceFn(color) {
-                // color is expected as [r,g,b,...]
-                const colorLin = [f(color[0]), f(color[1]), f(color[2])];
-                const colorChroma = Math.max(colorLin[0], colorLin[1], colorLin[2]) - Math.min(colorLin[0], colorLin[1], colorLin[2]);
-
-                let minDist = Infinity;
-                let bestIdx = 0;
-
-                for (let i = 0; i < paletteMeta.length; i++) {
-                    const p = paletteMeta[i].pl;
-
-                    const d0 = p[0] - colorLin[0];
-                    const d1 = p[1] - colorLin[1];
-                    const d2 = p[2] - colorLin[2];
-
-                    const dist = weights[0] * d0 * d0 + weights[1] * d1 * d1 + weights[2] * d2 * d2;
-
-                    const greyPenalty = (paletteMeta[i].isMidGrey && colorChroma > 0.1)
-                        ? colorChroma * chromaWeight
-                        : 0;
-
-                    const adjusted = dist + greyPenalty;
-
-                    if (adjusted < minDist) {
-                        minDist = adjusted;
-                        bestIdx = i;
-                    }
-                }
-
-                return bestIdx;
-            };
-        }
-
-
-        // Dithering function uses the prebuilt distance function for speed.
-        function floydSteinbergDither(img, palette, ratio = 0.8, errorClip = 255.0,
-            jitter = 8, channelBalance = 0.75, gammaInput = 1.2, seed = 42, chromaWeight = 0.3, edgeFalloff = 0.5) {
-
-            const h = img.length, w = img[0].length;
-            const output = Array.from({ length: h }, () => Array.from({ length: w }, () => [0, 0, 0, 255]));
-            const errorImg = img.map(row => row.map(px => [...px]));
-            let rngState = seed >>> 0;
-            const rand = () => ((rngState = (1664525 * rngState + 1013904223) >>> 0) / 0x100000000);
-
-            const distanceFn = makeDistanceFunction(palette, channelBalance, gammaInput, chromaWeight);
-
-            for (let y = 0; y < h; y++) {
-                for (let x = 0; x < w; x++) {
-                    const oldPixel = errorImg[y][x];
-                    const alpha = (oldPixel[3] ?? 255) / 255;
-                    if (alpha <= 0.001) {
-                        output[y][x] = [0, 0, 0, 0];
-                        continue;
-                    }
-
-                    // Add noise for dithering
-                    const noise = [
-                        (rand() * 2 - 1 + rand() * 2 - 1) * (jitter / 2),
-                        (rand() * 2 - 1 + rand() * 2 - 1) * (jitter / 2),
-                        (rand() * 2 - 1 + rand() * 2 - 1) * (jitter / 2)
-                    ];
-                    const noisyPixel = oldPixel.map((v, i) => i < 3
-                        ? Math.min(255, Math.max(0, v + noise[i]))
-                        : v);
-
-                    const idx = distanceFn(noisyPixel);
-                    const newPixel = palette[idx];
-                    output[y][x] = [...newPixel, oldPixel[3]];
-
-                    const quantError = oldPixel.slice(0, 3).map((v, i) =>
-                        Math.max(-errorClip, Math.min(errorClip, v - newPixel[i]))
-                    );
-
-                    // === Compute local gradient magnitude from the original (pre-error) image ===
-                    let gradSq = 0;
-                    const base = img[y][x];
-                    if (x > 0) {
-                        const prev = img[y][x - 1];
-                        gradSq +=
-                            Math.pow(base[0] - prev[0], 2) +
-                            Math.pow(base[1] - prev[1], 2) +
-                            Math.pow(base[2] - prev[2], 2);
-                    }
-                    if (y > 0) {
-                        const prev = img[y - 1][x];
-                        gradSq +=
-                            Math.pow(base[0] - prev[0], 2) +
-                            Math.pow(base[1] - prev[1], 2) +
-                            Math.pow(base[2] - prev[2], 2);
-                    }
-
-                    // Normalize gradient (optional)
-                    gradSq /= 6 * 255 * 255; // average over channels and neighbors
-
-                    const edgeWeight = Math.exp(-gradSq * edgeFalloff);
-
-                    // Scale the diffusion by both alpha and edge smoothness
-                    const aRatio = ratio * alpha * edgeWeight;
-
-                    // Diffuse quantization error
-                    if (x + 1 < w)
-                        for (let i = 0; i < 3; i++) errorImg[y][x + 1][i] += quantError[i] * (7 / 16) * aRatio;
-                    if (y + 1 < h) {
-                        if (x > 0)
-                            for (let i = 0; i < 3; i++) errorImg[y + 1][x - 1][i] += quantError[i] * (3 / 16) * aRatio;
-                        for (let i = 0; i < 3; i++) errorImg[y + 1][x][i] += quantError[i] * (5 / 16) * aRatio;
-                        if (x + 1 < w)
-                            for (let i = 0; i < 3; i++) errorImg[y + 1][x + 1][i] += quantError[i] * (1 / 16) * aRatio;
-                    }
-                }
-            }
-
-            return output;
-        }
-
-
-
-
         // ---- UI Setup ----
         const fileInput = document.getElementById('fileInput');
         const scaleInput = document.getElementById('scaleInput');
@@ -406,6 +144,14 @@
         ];
 
         let enabledColors = new Array(PALETTE.length).fill(true);
+            // Apply query-based palette control
+            if (enabledIndices !== null) {
+                enabledColors = enabledColors.map((_, i) => enabledIndices.includes(i));
+            } else if (disabledIndices.length > 0) {
+                disabledIndices.forEach(i => {
+                    if (i >= 0 && i < enabledColors.length) enabledColors[i] = false;
+                });
+            }
         let lastImage = null;
 
         // Generate palette buttons
@@ -427,6 +173,7 @@
             const file = e.target.files[0];
             if (!file) return;
             const img = new Image();
+            img.crossOrigin = "anonymous";
             img.onload = () => {
                 lastImage = img;
                 processImage();
@@ -434,6 +181,18 @@
             };
             img.src = URL.createObjectURL(file);
         });
+
+            // ---- Auto-load image if src query parameter provided ----
+            if (window.initialImageSrc) {
+                const img = new Image();
+                img.crossOrigin = "anonymous";
+                img.onload = () => {
+                    lastImage = img;
+                    processImage();
+                    resetTransform();
+                };
+                img.src = window.initialImageSrc;
+            }
 
         let processTimeout;
         function queueProcess() {
@@ -531,94 +290,8 @@
             link.click();
         });
     </script>
-    <script>
-        // ---- Pan & Zoom Controls (Pixel-anchored zoom + centered start) ----
-        const wrapper = document.getElementById('canvasWrapper');
-
-        let zoom = 1;
-        let offsetX = 0, offsetY = 0;
-        let isDragging = false;
-        let lastX = 0, lastY = 0;
-
-        function updateCanvasTransform() {
-            canvas.style.transform = `translate(${offsetX}px, ${offsetY}px) scale(${zoom})`;
-            beforeCanvas.style.transform = `translate(${offsetX}px, ${offsetY}px) scale(${zoom})`;
-
-            // Apply pixelated rendering only if zoomed in
-            if (zoom > 1.01) {
-                canvas.classList.add('pixelated');
-                beforeCanvas.classList.add('pixelated');
-            } else {
-                canvas.classList.remove('pixelated');
-                beforeCanvas.classList.remove('pixelated');
-            }
-        }
-
-
-        // Center canvas in wrapper
-        function centerCanvas() {
-            const rect = wrapper.getBoundingClientRect();
-            const w = canvas.width * zoom;
-            const h = canvas.height * zoom;
-            offsetX = (rect.width - w) / 2;
-            offsetY = (rect.height - h) / 2;
-            updateCanvasTransform();
-        }
-
-        // Wheel zoom (keep pixel at cursor fixed)
-        wrapper.addEventListener('wheel', e => {
-            e.preventDefault();
-
-            const rect = wrapper.getBoundingClientRect();
-            const mouseX = e.clientX - rect.left;
-            const mouseY = e.clientY - rect.top;
-
-            // Convert screen coordinates to "world" coordinates
-            const worldX = (mouseX - offsetX) / zoom;
-            const worldY = (mouseY - offsetY) / zoom;
-
-            // Apply zoom delta
-            const zoomFactor = e.deltaY < 0 ? 1.1 : 0.9;
-            const newZoom = Math.min(Math.max(zoom * zoomFactor, 0.2), 10);
-
-            // Adjust pan to keep world point fixed
-            offsetX = mouseX - worldX * newZoom;
-            offsetY = mouseY - worldY * newZoom;
-            zoom = newZoom;
-
-            updateCanvasTransform();
-        });
-
-        // Drag panning
-        wrapper.addEventListener('mousedown', e => {
-            isDragging = true;
-            lastX = e.clientX;
-            lastY = e.clientY;
-            wrapper.style.cursor = 'grabbing';
-        });
-        window.addEventListener('mouseup', () => {
-            isDragging = false;
-            wrapper.style.cursor = 'grab';
-        });
-        window.addEventListener('mousemove', e => {
-            if (!isDragging) return;
-            offsetX += e.clientX - lastX;
-            offsetY += e.clientY - lastY;
-            lastX = e.clientX;
-            lastY = e.clientY;
-            updateCanvasTransform();
-        });
-
-        // Reset & center after each new image render
-        function resetTransform() {
-            zoom = 1;
-            offsetX = 0;
-            offsetY = 0;
-            centerCanvas();
-        }
-
-        resetTransform();
-    </script>
+    <script src="js/panzoom.js"></script>
+    <script src="js/share.js"></script>
 </body>
 
 </html>
