--- a/wplace/index.html
+++ b/wplace/index.html
@@ -32,7 +32,17 @@
                     Transparency Threshold
                     <input type="number" id="transparencyInput" value="178" step="1" min="0" max="255">
                 </label>
+            </section>
 
+            <section class="settings-section">
+                <h2>Freeze Mask</h2>
+
+                <label>
+                    Brush Size
+                    <input type="number" id="brushSize" value="6" step="1" min="1" max="50">
+                </label>
+
+                <button id="toggleMaskModeBtn">Mode: Add</button>
                 <button id="editMaskBtn">Edit Mask</button>
                 <button id="clearMaskBtn">Clear Mask</button>
             </section>
