Added tooltip for Freeze Mask

--- a/wplace/index.html
+++ b/wplace/index.html
@@ -35,7 +35,7 @@
             </section>
 
             <section class="settings-section">
-                <h2>Freeze Mask</h2>
+                <h2 title="Used for touch-ups. Click Edit Mask to 'paint' regions you want fixed. Subsequent edits will leave those pixels untouched. Click the button again to leave mask edit mode. Panning and zooming are disabled in this mode. (WIP)">Freeze Mask</h2>
 
                 <label>
                     Brush Size
