Added tooltip for freeze toggle button

--- a/wplace/index.html
+++ b/wplace/index.html
@@ -42,7 +42,7 @@
                     <input type="number" id="brushSize" value="6" step="1" min="1" max="50">
                 </label>
 
-                <button id="toggleMaskModeBtn">Mode: Add</button>
+                <button id="toggleMaskModeBtn" title="Add mode to set frozen pixels. Subtract mode to unfreeze pixels.">Mode: Add</button>
                 <button id="editMaskBtn">Edit Mask</button>
                 <button id="clearMaskBtn">Clear Mask</button>
             </section>
