Added tool buttons

--- a/wplace/index.html
+++ b/wplace/index.html
@@ -35,14 +35,25 @@
             </section>
 
             <section class="settings-section">
-                <h2 title="Used for touch-ups. Click Edit Mask to 'paint' regions you want fixed. Subsequent edits will leave those pixels untouched. Click the button again to leave mask edit mode. Panning and zooming are disabled in this mode. (WIP)">Freeze Mask</h2>
+                <h2>Tools</h2>
+                <div class="tools-panel">
+                    <button id="toolPanBtn" class="tool-btn active">Pan</button>
+                    <button id="toolBrushBtn" class="tool-btn">Brush</button>
+                </div>
+            </section>
+
+            <section class="settings-section">
+                <h2
+                    title="Used for touch-ups. Click Edit Mask to 'paint' regions you want fixed. Subsequent edits will leave those pixels untouched. Click the button again to leave mask edit mode. Panning and zooming are disabled in this mode. (WIP)">
+                    Freeze Mask</h2>
 
                 <label>
                     Brush Size
                     <input type="number" id="brushSize" value="6" step="1" min="1" max="50">
                 </label>
 
-                <button id="toggleMaskModeBtn" title="Add mode to set frozen pixels. Subtract mode to unfreeze pixels.">Mode: Add</button>
+                <button id="toggleMaskModeBtn"
+                    title="Add mode to set frozen pixels. Subtract mode to unfreeze pixels.">Mode: Add</button>
                 <button id="editMaskBtn">Edit Mask</button>
                 <button id="clearMaskBtn">Clear Mask</button>
             </section>
