Added paid color indicator

--- a/wplace/index.html
+++ b/wplace/index.html
@@ -165,27 +165,69 @@
         const transparencyInput = document.getElementById('transparencyInput');
 
         const PALETTE = [
-            [0, 0, 0, "Black"], [60, 60, 60, "Dark Gray"], [120, 120, 120, "Gray"],
-            [170, 170, 170, "Medium Gray"], [210, 210, 210, "Light Gray"], [255, 255, 255, "White"],
-            [96, 0, 24, "Deep Red"], [165, 14, 30, "Dark Red"], [237, 28, 36, "Red"],
-            [250, 128, 114, "Light Red"], [228, 92, 26, "Dark Orange"], [255, 127, 39, "Orange"],
-            [246, 170, 9, "Gold"], [249, 221, 59, "Yellow"], [255, 250, 188, "Light Yellow"],
-            [156, 132, 49, "Dark Goldenrod"], [197, 173, 49, "Goldenrod"], [232, 212, 95, "Light Goldenrod"],
-            [74, 107, 58, "Dark Olive"], [90, 148, 74, "Olive"], [132, 197, 115, "Light Olive"],
-            [14, 185, 104, "Dark Green"], [19, 230, 123, "Green"], [135, 255, 94, "Light Green"],
-            [12, 129, 110, "Dark Teal"], [16, 174, 166, "Teal"], [19, 225, 190, "Light Teal"],
-            [15, 121, 159, "Dark Cyan"], [96, 247, 242, "Cyan"], [187, 250, 242, "Light Cyan"],
-            [40, 80, 158, "Dark Blue"], [64, 147, 228, "Blue"], [125, 199, 255, "Light Blue"],
-            [77, 49, 184, "Dark Indigo"], [107, 80, 246, "Indigo"], [153, 177, 251, "Light Indigo"],
-            [74, 66, 132, "Dark Slate Blue"], [122, 113, 196, "Slate Blue"], [181, 174, 241, "Light Slate Blue"],
-            [120, 12, 153, "Dark Purple"], [170, 56, 185, "Purple"], [224, 159, 249, "Light Purple"],
-            [203, 0, 122, "Dark Pink"], [236, 31, 128, "Pink"], [243, 141, 169, "Light Pink"],
-            [155, 82, 73, "Dark Peach"], [209, 128, 120, "Peach"], [250, 182, 164, "Light Peach"],
-            [104, 70, 52, "Dark Brown"], [149, 104, 42, "Brown"], [219, 164, 99, "Light Brown"],
-            [123, 99, 82, "Dark Tan"], [156, 132, 107, "Tan"], [214, 181, 148, "Light Tan"],
-            [209, 128, 81, "Dark Beige"], [248, 178, 119, "Beige"], [255, 197, 165, "Light Beige"],
-            [109, 100, 63, "Dark Stone"], [148, 140, 107, "Stone"], [205, 197, 158, "Light Stone"],
-            [51, 57, 65, "Dark Slate"], [109, 117, 141, "Slate"], [179, 185, 209, "Light Slate"]
+            [0, 0, 0, "Black", false],
+            [60, 60, 60, "Dark Gray", false],
+            [120, 120, 120, "Gray", false],
+            [170, 170, 170, "Medium Gray", true],
+            [210, 210, 210, "Light Gray", false],
+            [255, 255, 255, "White", false],
+            [96, 0, 24, "Deep Red", false],
+            [165, 14, 30, "Dark Red", true],
+            [237, 28, 36, "Red", false],
+            [250, 128, 114, "Light Red", true],
+            [228, 92, 26, "Dark Orange", true],
+            [255, 127, 39, "Orange", false],
+            [246, 170, 9, "Gold", false],
+            [249, 221, 59, "Yellow", false],
+            [255, 250, 188, "Light Yellow", false],
+            [156, 132, 49, "Dark Goldenrod", true],
+            [197, 173, 49, "Goldenrod", true],
+            [232, 212, 95, "Light Goldenrod", true],
+            [74, 107, 58, "Dark Olive", true],
+            [90, 148, 74, "Olive", true],
+            [132, 197, 115, "Light Olive", true],
+            [14, 185, 104, "Dark Green", false],
+            [19, 230, 123, "Green", false],
+            [135, 255, 94, "Light Green", false],
+            [12, 129, 110, "Dark Teal", false],
+            [16, 174, 166, "Teal", false],
+            [19, 225, 190, "Light Teal", false],
+            [15, 121, 159, "Dark Cyan", true],
+            [96, 247, 242, "Cyan", false],
+            [187, 250, 242, "Light Cyan", true],
+            [40, 80, 158, "Dark Blue", false],
+            [64, 147, 228, "Blue", false],
+            [125, 199, 255, "Light Blue", true],
+            [77, 49, 184, "Dark Indigo", true],
+            [107, 80, 246, "Indigo", false],
+            [153, 177, 251, "Light Indigo", false],
+            [74, 66, 132, "Dark Slate Blue", true],
+            [122, 113, 196, "Slate Blue", true],
+            [181, 174, 241, "Light Slate Blue", true],
+            [120, 12, 153, "Dark Purple", false],
+            [170, 56, 185, "Purple", false],
+            [224, 159, 249, "Light Purple", false],
+            [203, 0, 122, "Dark Pink", false],
+            [236, 31, 128, "Pink", false],
+            [243, 141, 169, "Light Pink", false],
+            [155, 82, 73, "Dark Peach", true],
+            [209, 128, 120, "Peach", true],
+            [250, 182, 164, "Light Peach", true],
+            [104, 70, 52, "Dark Brown", false],
+            [149, 104, 42, "Brown", false],
+            [219, 164, 99, "Light Brown", true],
+            [123, 99, 82, "Dark Tan", true],
+            [156, 132, 107, "Tan", true],
+            [214, 181, 148, "Light Tan", true],
+            [209, 128, 81, "Dark Beige", true],
+            [248, 178, 119, "Beige", false],
+            [255, 197, 165, "Light Beige", true],
+            [109, 100, 63, "Dark Stone", true],
+            [148, 140, 107, "Stone", true],
+            [205, 197, 158, "Light Stone", true],
+            [51, 57, 65, "Dark Slate", true],
+            [109, 117, 141, "Slate", true],
+            [179, 185, 209, "Light Slate", true]
         ];
 
         let enabledColors = new Array(PALETTE.length).fill(true);
@@ -202,19 +244,30 @@
         let lastDithered = null;
 
         // Generate palette buttons
-        PALETTE.forEach(([r, g, b, name], i) => {
+        PALETTE.forEach(([r, g, b, name, isPaid], i) => {
             const btn = document.createElement('div');
             btn.className = 'color-btn enabled';
             btn.title = name;
             btn.style.backgroundColor = `rgb(${r},${g},${b})`;
             btn.dataset.index = i;
+
+            // --- Add paid indicator ---
+            if (isPaid) {
+                const badge = document.createElement('div');
+                badge.className = 'paid-indicator';
+                btn.appendChild(badge);
+            }
+            // --------------------------
+
             btn.addEventListener('click', () => {
                 enabledColors[i] = !enabledColors[i];
                 btn.className = 'color-btn ' + (enabledColors[i] ? 'enabled' : 'disabled');
                 if (lastImage) processImage();
             });
+
             paletteControls.appendChild(btn);
         });
+
 
         fileInput.addEventListener('change', e => {
             const file = e.target.files[0];
