--- a/wplace/index.html
+++ b/wplace/index.html
@@ -128,6 +128,7 @@
                 <canvas id="beforeCanvas"></canvas>
                 <canvas id="canvas"></canvas>
                 <canvas id="maskCanvas"></canvas>
+                <canvas id="brushPreviewCanvas"></canvas>
             </div>
         </main>
 
@@ -151,7 +152,13 @@
         const canvas = document.getElementById('canvas');
         const beforeCanvas = document.getElementById('beforeCanvas');
         const compareSlider = document.getElementById('compareSlider');
+        const brushPreviewCanvas = document.getElementById('brushPreviewCanvas');
+
         const ctx = canvas.getContext('2d');
+        const brushPreviewCtx = brushPreviewCanvas.getContext('2d');
+        
+        brushPreviewCanvas.style.pointerEvents = 'none';
+        brushPreviewCanvas.style.opacity = '0';
 
         const ratioInput = document.getElementById('ratioInput');
         const jitterInput = document.getElementById('jitterInput');
@@ -322,6 +329,10 @@
             canvas.height = h;
             beforeCanvas.width = w;
             beforeCanvas.height = h;
+            maskCanvas.width = w;
+            maskCanvas.height = h;
+            brushPreviewCanvas.width = w;
+            brushPreviewCanvas.height = h;
 
             // Ensure mask exists and matches new size
             const maskNeedsResize = !freezeMask || freezeMask.length !== w * h;
