--- a/wplace/index.html
+++ b/wplace/index.html
@@ -54,7 +54,7 @@
 
                 <button id="toggleMaskModeBtn"
                     title="Add mode to set frozen pixels. Subtract mode to unfreeze pixels.">Mode: Add</button>
-                    
+
                 <button id="clearMaskBtn">Clear Mask</button>
             </section>
 
@@ -74,12 +74,6 @@
                             title="Adjusts how brightness differences are perceived when finding the nearest palette color. Use 1.0 for linear RGB; higher values (e.g. 1.5–2) make bright areas smoother; lower values emphasize dark tones.">
                             Gamma
                             <input type="number" id="gammaInput" value="1.2" step="0.1" min="0.1" max="3">
-                        </label>
-
-                        <label
-                            title="Changes how much importance is given to human color sensitivity. Use 0 for pure RGB distance; 1.0 gives more realistic perceptual weighting (green matters more, blue less).">
-                            Balance
-                            <input type="number" id="balanceInput" value="0.75" step="0.05" min="0.00" max="2.00">
                         </label>
 
                         <label
@@ -111,6 +105,25 @@
                             Seed
                             <input type="number" id="seedInput" value="42" step="1" min="0">
                         </label>
+                    </div>
+                </fieldset>
+
+                <fieldset>
+                    <legend>Channel Weights</legend>
+                    <div class="rgb-balance-box">
+                        <label title="Weight multiplied to the red channel for the distance calculation">
+                            R Weight
+                            <input type="number" id="balanceR" value="0.3" step="0.01" min="0" max="5">
+                        </label>
+                        <label title="Weight multiplied to the green channel for the distance calculation">
+                            G Weight
+                            <input type="number" id="balanceG" value="0.59" step="0.01" min="0" max="5">
+                        </label>
+                        <label title="Weight multiplied to the blue channel for the distance calculation">
+                            B Weight
+                            <input type="number" id="balanceB" value="0.11" step="0.01" min="0" max="5">
+                        </label>
+                        <button id="setPerceptualBtn">Set Perceptual</button>
                     </div>
                 </fieldset>
             </section>
@@ -166,13 +179,24 @@
             const ratioInput = document.getElementById('ratioInput');
             const jitterInput = document.getElementById('jitterInput');
             const gammaInput = document.getElementById('gammaInput');
-            const balanceInput = document.getElementById('balanceInput');
             const seedInput = document.getElementById('seedInput');
             const paletteControls = document.getElementById('paletteControls');
             const greyPenaltyInput = document.getElementById('greyPenaltyInput');
             const edgeFalloffInput = document.getElementById('edgeFalloffInput');
             const errorClipInput = document.getElementById('errorClipInput');
             const transparencyInput = document.getElementById('transparencyInput');
+
+            const balanceR = document.getElementById('balanceR');
+            const balanceG = document.getElementById('balanceG');
+            const balanceB = document.getElementById('balanceB');
+            const setPerceptualBtn = document.getElementById('setPerceptualBtn');
+
+            setPerceptualBtn.addEventListener('click', () => {
+                balanceR.value = 0.3;
+                balanceG.value = 0.59;
+                balanceB.value = 0.11;
+                if (typeof queueProcess === "function") queueProcess();
+            });
 
             const PALETTE = [
                 [0, 0, 0, "Black", false],
@@ -312,7 +336,7 @@
                 }, 100);
             }
 
-            [interpolation, ratioInput, jitterInput, gammaInput, balanceInput, seedInput, greyPenaltyInput, edgeFalloffInput, errorClipInput, transparencyInput]
+            [interpolation, ratioInput, jitterInput, gammaInput, balanceR, balanceG, balanceB, seedInput, greyPenaltyInput, edgeFalloffInput, errorClipInput, transparencyInput]
                 .forEach(el => el.addEventListener('input', queueProcess));
 
             scaleInput.addEventListener('input', () => {
@@ -357,7 +381,9 @@
                 const ratio = parseFloat(ratioInput.value);
                 const jitter = parseFloat(jitterInput.value);
                 const gamma = parseFloat(gammaInput.value);
-                const balance = parseFloat(balanceInput.value);
+                const rWeight = parseFloat(balanceR.value);
+                const gWeight = parseFloat(balanceG.value);
+                const bWeight = parseFloat(balanceB.value);
                 const seed = parseInt(seedInput.value);
                 const greyPenalty = parseFloat(greyPenaltyInput.value);
                 const edgeFalloff = parseFloat(edgeFalloffInput.value);
@@ -380,7 +406,10 @@
 
                 const ditheredData = floydSteinbergDither(
                     imgData.data, w, h, lastDithered, activePalette, freezeMask,
-                    { ratio, errorClip, jitter, channelBalance: balance, gammaInput: gamma, seed, chromaWeight: greyPenalty, edgeFalloff }
+                    {
+                        ratio, errorClip, jitter, rWeight, gWeight, bWeight,
+                        gammaInput: gamma, seed, chromaWeight: greyPenalty, edgeFalloff
+                    }
                 );
 
                 for (let i = 0; i < ditheredData.length; i += 4) {
