Added fill mask buttons

--- a/wplace/index.html
+++ b/wplace/index.html
@@ -38,7 +38,7 @@
                 <h2>Tools</h2>
                 <div class="tools-panel">
                     <button id="toolPanBtn" class="tool-btn active">Pan</button>
-                    <button id="toolBrushBtn" class="tool-btn">Brush</button>
+                    <button id="toolBrushBtn" class="tool-btn">Freeze Mask Edit Brush</button>
                 </div>
             </section>
 
@@ -55,7 +55,8 @@
                 <button id="toggleMaskModeBtn"
                     title="Add mode to set frozen pixels. Subtract mode to unfreeze pixels.">Mode: Add</button>
 
-                <button id="clearMaskBtn">Clear Mask</button>
+                <button id="clearMaskBtn" title="Unfreeze all pixels">Clear Mask</button>
+                <button id="fillMaskBtn" title="Freeze all pixels">Fill Mask</button>
             </section>
 
             <section class="settings-section">
