Made auxiliary canvases non-interactable by default

--- a/wplace/index.html
+++ b/wplace/index.html
@@ -136,7 +136,7 @@
 
             <section class="settings-section">
                 <button id="downloadBtn" disabled>Download</button>
-                <button id="shareBtn">Share</button>
+                <button id="shareBtn" style="display: none;">Share</button>
             </section>
         </aside>
 
